test/error/operator_narg.gw
operator void chuck(int i, int j, int k){ }
